--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,24 @@
-aiodns==3.0.0
-asgiref==3.4.1
-asynctest==0.13.0
-blinker==1.4
-brotli==1.0.9
-cchardet==2.1.7
-ConfigParser==5.2.0
-cryptography==36.0.1
-Cython==0.29.26
-Dialog==0.2.0
-dl==0.1.0
-docutils==0.18.1
-eventlet==0.33.0
-gevent==21.12.0
-greenlet==1.1.2
-HTMLParser==0.0.2
-idna_ssl==1.1.0
-importlib_metadata==4.10.0
-inotify==0.2.10
-keyring==23.5.0
-lockfile==0.12.2
-lxml==4.7.1
-mock==4.0.3
-numpy==1.22.0
-ordereddict==1.1
-PasteScript==3.2.1
-protobuf==3.19.3
-pyOpenSSL==21.0.0
-pytest==6.2.5
-python-dotenv==0.19.2
-setproctitle==1.2.2
-simplejson==3.17.6
-tokio==0.2.0
-toml==0.10.2
-tornado==6.1
-typing_extensions==4.0.1
-unicodedata2==14.0.0
-unittest2==1.1.0
-uvloop==0.16.0
-watchdog==2.1.6
-xmlrpclib==1.0.1
-zipp==3.7.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
+click==8.0.3
+docopt==0.6.2
+Flask==2.0.2
+frozenlist==1.2.0
+future==0.18.2
+gunicorn==20.1.0
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+line-bot-sdk==2.0.1
+MarkupSafe==2.0.1
+multidict==5.2.0
+pipreqs==0.4.11
+requests==2.27.1
+urllib3==1.26.8
+Werkzeug==2.0.2
+yarg==0.1.9
+yarl==1.7.2
